# ubirch-avr-hallo

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.cmake
cmake/: avr-arduino-toolchain.cmake
data/: test1.txt
data/ubirch-hallo-wiring.graffle/: data.plist  image1.tiff  image10.tiff  image2.tiff  image5.tiff  image6.tiff  image7.tiff  image8.tiff
server/: README.md  build.sbt
server/project/: plugins.sbt
server/src/main/resources/: application.conf
server/src/main/scala/com/ubirch/: Boot.scala  HalloService.scala
server/src/test/scala/com/ubirch/: HalloServiceSpec.scala
sketches/libraries/SdFat/src/: SdFatConfig.h
sketches/test-audio/: CMakeLists.txt  main.cpp
sketches/test-audio/vs1053/: VS1053.cpp  VS1053.h  VS1053_FilePlayer.cpp  VS1053_FilePlayer.h
sketches/ubirch-hallo/: CMakeLists.txt  UbirchSIM800.cpp  checksum.c  checksum.h  config.h.template  error.c  error.h  main.cpp  main.h  ubirch.c  ubirch.h  ubirch_sim800.cpp  ubirch_sim800.h
sketches/ubirch-hallo/i2c/: i2c.h
sketches/ubirch-hallo/mpr121/: mpr121.c  mpr121.h
sketches/ubirch-hallo/sim800/: UbirchSIM800.cpp  UbirchSIM800.h
sketches/ubirch-hallo/vs1053/: Adafruit_VS1053.cpp  Adafruit_VS1053_FilePlayer.cpp  Adafruit_VS1053_FilePlayer.h
sketches/ubirch-hallo/ws2812/: README.md  burstsequence_16mhz.h  burstsequence_8mhz.h  main.c  ws2812.c  ws2812.h
